--- a/Lesson4/index.html
+++ b/Lesson4/index.html
@@ -5,9 +5,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script language="JavaScript">
+    <script language="JavaScript"> 
+    function functionName(){
+            alert(`Привет, ${name}`);
+        }
         let name = prompt('Как вас зовут?', 'Имя');
-        alert(`Привет, ${name}`);
+        functionName();
     </script>
 </body>
 </html>
